# LR7

Task_1/: CMakeLists.txt  Task_1  Task_1.cpp
Task_2/: CMakeLists.txt  Task_2  Task_2.cpp
Task_3/: CMakeLists.txt  Task_3  Task_3.cpp
Task_4/: CMakeLists.txt  Task_4  Task_4.cpp  task_4.cpp
Task_5/: CMakeLists.txt  Task_5  Task_5.cpp
